fixing mobile screen overflow cap 2 season 1

--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -1,3 +1,7 @@
+.intro-container {
+    overflow: hidden;
+}
+
 header {
     width: 100%;
     position: absolute;
